norme finie, compilation corrige

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,3 +1,14 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: gurodrig <marvin@42.fr>                    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2023/04/14 13:37:30 by gurodrig          #+#    #+#              #
+#    Updated: 2023/04/14 13:37:31 by gurodrig         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 SRCS	= ft_memcpy.c \
 		ft_memmove.c \
 		ft_bzero.c \
